@@ -63,7 +63,7 @@
         "name": "Сковорода Никита Андреевич",
         "email": "chalkerx@gmail.com"
     }],
-    "version": "2.0.0-2",
+    "version": "2.0.0-3",
     "homepage": "http://www.totaljs.com",
     "bugs": {
         "url": "https://github.com/totaljs/framework/issues",
