@@ -11,6 +11,7 @@
 - added: `F.route()` supports a new flag: `cors` (creates a cors route) and `credentials` (enables cookies for cors)
 - added: `ErrorBuilder.plain()` returns all errors as simple string
 
+- updated: `F.route(url, ...)` - `url`can be String Array with multiple relative paths
 - updated: `F.file()` supports flags instead of middleware and flags supports extensions `['.jpg', '.png']`
 - updated: `F.sitemap()` returns object with a new field: `wildcard: {Boolean}`
 - updated: `F.problem()`, `F.change()`, `controller.problem()` and `controller.change()` write logs to the file
